--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -5,14 +5,9 @@ subheadline: "HTTP 404"
 teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
 sitemap: false
 permalink: "/404.html"
+redirect_to: http://innersourcecommons.org/404
 ---
-## No problem!
 
-Try...  
-...to start over on the [home page]({{ site.baseurl }}/);  
-...to **search** below;  
-if you can't find it, [ask about it]({{ site.baseurl }}/contact/).
+# Moved
 
-### Search
-
-{% include _google_search.html %}
+This site has been moved. You should now be redirected to [http://innersourcecommons.org/](http://innersourcecommons.org/).
