Wipe content and change all pages to redirects

--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -1,13 +1,6 @@
 ---
-layout: page
-title: "Oops! Nothing here..."
-subheadline: "HTTP 404"
-teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
-sitemap: false
-permalink: "/404.html"
-redirect_to: http://innersourcecommons.org/404
+layout: redirect
+permalink: "/404/"
+redirect_to:
+    - http://innersourcecommons.org/404/
 ---
-
-# Moved
-
-This site has been moved. You should now be redirected to [http://innersourcecommons.org/](http://innersourcecommons.org/).
